<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="pl.zyper.autosms.MainActivity">

    <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            android:visible="false"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_flush_database"
            android:orderInCategory="101"
            android:title="@string/action_flush_database"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_refresh"
            android:orderInCategory="103"
            android:title="@string/action_refresh"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_about"
            android:orderInCategory="200"
            android:title="@string/action_about"
            app:showAsAction="never" />
</menu>
