<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        tools:context=".TriggerCreationActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/box_margin"
                android:background="@drawable/round_border"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="gone">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/trigger_name"
                    android:text="@string/trigger_name" />

            <EditText
                    android:id="@+id/trigger_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="@string/trigger_name_placeholder" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/box_margin"
                    android:layout_weight="50"
                    android:background="@drawable/round_border"
                    android:orientation="vertical">

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                <pl.zyper.autosms.DateDialogSpinner
                        android:id="@+id/date_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:dropDownWidth="wrap_content"
                        android:minHeight="48dp"
                        android:popupBackground="#00000000"
                        android:spinnerMode="dialog"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textSize="6pt"
                        tools:listitem="@android:layout/list_content" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:text="19.11.2016"
                        android:textAlignment="center"
                        android:textSize="6pt"
                        android:visibility="gone"
                        tools:ignore="HardcodedText"
                        tools:visibility="visible" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/box_margin"
                android:layout_weight="50"
                android:background="@drawable/round_border"
                android:orientation="vertical">

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <pl.zyper.autosms.TimeDialogSpinner
                        android:id="@+id/time_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:dropDownWidth="wrap_content"
                        android:minHeight="48dp"
                        android:popupBackground="#00000000"
                        android:spinnerMode="dialog"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textSize="6pt"
                        tools:listitem="@android:layout/list_content" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:text="12:37"
                        android:textAlignment="center"
                        android:textSize="6pt"
                        android:visibility="gone"
                        tools:ignore="HardcodedText"
                        tools:visibility="visible" />
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contacts_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/box_margin"
                android:layout_weight="90"
                android:background="@drawable/round_border"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="6dp"
                android:paddingBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/trigger_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <SearchView
                    android:id="@+id/contacts_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:background="@drawable/round_border"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/hint_contact_phone"
                    android:importantForAutofill="no"
                    android:inputType="phone|text|textPersonName"
                    android:padding="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/contacts_list"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/contacts_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="#ffffff"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/contacts_search"
                    tools:listitem="@layout/contact_item"
                    tools:itemCount="8"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
                android:id="@+id/trigger_message"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_margin="@dimen/box_margin"
                android:layout_weight="0"
                android:background="@drawable/round_border"
                android:gravity="start|top"
                android:hint="@string/text_message"
                android:importantForAutofill="no"
                android:inputType="text|textLongMessage"
                android:padding="4dp"
                app:layout_constraintBottom_toTopOf="@+id/button_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

        </EditText>

        <Button
                android:id="@+id/button_next"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/box_margin"
                android:layout_weight="15"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout></ScrollView>